--- a/src/components/cap-password/cap-password.css
+++ b/src/components/cap-password/cap-password.css
@@ -1,7 +1,27 @@
 #password {
-    display:inline-block;
+border: 2px solid lightgray;
+border-radius: 10px;
+padding: 10px;
+width: 300px;
+height: 40px;
+display:inline-flex;
+justify-content: space-between;
+align-items: center;
+}
+
+
+#password-input {
+    appearance: none;
+    border-style: none;
+    font-size:1.5em;
+    width: 270px;
+    color: #807c73;
+}
+
+#password-input:focus {
+    outline-width: 0;
 }
 
 #checkbox {
- 
+ justify-self: end;
 }
