--- a/src/components/cap-password/cap-password.scss
+++ b/src/components/cap-password/cap-password.scss
@@ -1,7 +1,6 @@
 #password-container {
-  position: absolute;
-  left: 300px;
-  top: 140px;
+  margin-top:30px;
+  position: relative;
   display: inline-flex;
   justify-content: space-between;
   align-items: center;
@@ -10,7 +9,7 @@
 #password-input-border {
   position: relative;
   z-index: 0;
-  left: -260px;
+  left: -250px;
   border: 2px solid;
   border-color: var(--input-border-color);
   border-radius: 10px;
@@ -29,7 +28,7 @@
 #password-input {
   position: relative;
   z-index: 1;
-  margin-left:20px;
+  left:10px;
   outline: none;
   border-style: none;
   font-size: 1.5em;
@@ -40,7 +39,7 @@
 #show-password-button {
   position: relative;
   z-index: 1;
-  left: -320px;
+  left: -305px;
   margin-left: 10px;
   cursor: pointer;
 }
