--- a/src/components/cap-pesel/cap-pesel.scss
+++ b/src/components/cap-pesel/cap-pesel.scss
@@ -1,49 +1,47 @@
-#error-message {
-    position: relative;
-    left:-570px;
-    top:50px;
-    color: var(--error-message-color);
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: small;
-    font-weight: bold;
+#pesel-container {
+  margin-top: 30px;
+  position: relative;
+  display: inline-flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-#pesel-container {
-    position: absolute;
-    left: 300px;
-    top: 40px;
-    display: inline-flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  #pesel-input-border {
-    position: relative;
-    z-index: 0;
-    left: -260px;
-    border: 2px solid;
-    border-color: var(--input-border-color);
-    border-radius: 10px;
-    padding: 10px;
-    width: 300px;
-    height: 40px;
-    outline: none;
-    transition: all 0.30s ease-in-out;
+#error-message {
+  position: relative;
+  // left: -570px;
+  top: 45px;
+  color: var(--error-message-color);
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: small;
+  font-weight: bold;
+}
 
-  }
-  
-  #pesel-input:focus + #pesel-input-border {
-    box-shadow: 0 0 5px var(--input-focused-color);
-    border: 2px solid var(--input-focused-color);
-  }
-  
-  #pesel-input {
-    position: relative;
-    z-index: 1;
-    margin-left:20px;
-    outline: none;
-    border-style: none;
-    font-size: 1.5em;
-    width: 250px;
-    color: var(--input-text-color);
-  }
+#pesel-input-border {
+  position: relative;
+  z-index: 0;
+  left: -250px;
+  border: 2px solid;
+  border-color: var(--input-border-color);
+  border-radius: 10px;
+  padding: 10px;
+  width: 300px;
+  height: 40px;
+  outline: none;
+  transition: all 0.3s ease-in-out;
+}
+
+#pesel-input:focus + #pesel-input-border {
+  box-shadow: 0 0 5px var(--input-focused-color);
+  border: 2px solid var(--input-focused-color);
+}
+
+#pesel-input {
+  position: relative;
+  z-index: 1;
+  left: 10px;
+  outline: none;
+  border-style: none;
+  font-size: 1.5em;
+  width: 250px;
+  color: var(--input-text-color);
+}
